# exif_photo

./: .gitignore  pyproject.toml  readme.md
exif_photo/: ImageMarker.py  Marker.py  __main__.py  main.py  util.py
exif_photo/Mapper/: ImageMarker.py  Mapper.py
exif_photo/Reader/: exif_reader.py
exif_reader/: exif_reader.py
tests/: test_exif_photo.py
